# manifold-rust

./: .gitmodules  Cargo.toml  LICENSE  build.rs  build.sh  build_with_wasm_pack.sh  wrapper.h
src/: lib.rs  main.rs
