[package]
name = "manifold_rust"
version = "0.1.0"
authors = ["Natalie Cuthbert"]
edition = "2018"
rust-version = "1.57"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.92"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm32-unknown-unknown-openbsd-libc = "0.2"


[build-dependencies]
bindgen = "0.69.4"
cmake = "0.1.50"
